// Vitest Snapshot v1

exports[`<Settings /> > should render when [props.loading=%p] false 1`] = `
<ContainerWide>
  <ViewHeader
    title="Administration"
  >
    <ViewHeaderTitle>
      Administration
    </ViewHeaderTitle>
  </ViewHeader>
  <Tabs
    bsStyle="tabs"
  >
    <TabsLink
      to="/administration/settings"
    >
      Settings
    </TabsLink>
    <TabsLink
      to="/administration/users"
    >
      Users
    </TabsLink>
    <TabsLink
      to="/administration/groups"
    >
      Groups
    </TabsLink>
  </Tabs>
  <ContainerNarrow>
    <Switch>
      <Redirect
        exact={true}
        from="/administration"
        to="/administration/settings"
      />
      <Route
        component={[Function]}
        path="/administration/settings"
      />
      <Route
        component={
          {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        exact={true}
        path="/administration/users"
      />
      <Route
        component={
          {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        path="/administration/users/:userId"
      />
      <Route
        component={
          {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        path="/administration/groups"
      />
    </Switch>
  </ContainerNarrow>
</ContainerWide>
`;

exports[`<Settings /> > should render when [props.loading=%p] true 1`] = `
<ContainerWide>
  <ViewHeader
    title="Administration"
  >
    <ViewHeaderTitle>
      Administration
    </ViewHeaderTitle>
  </ViewHeader>
  <Tabs
    bsStyle="tabs"
  >
    <TabsLink
      to="/administration/settings"
    >
      Settings
    </TabsLink>
    <TabsLink
      to="/administration/users"
    >
      Users
    </TabsLink>
    <TabsLink
      to="/administration/groups"
    >
      Groups
    </TabsLink>
  </Tabs>
  <ContainerNarrow>
    <LoadingPlaceholder />
  </ContainerNarrow>
</ContainerWide>
`;
